unpackaged/main/default/objects/CA_Exhibit__c/CA_Exhibit__c.object-meta.xml
<CustomObject>
    <description>This will be the Exhibit object for all Accounts under Generic Template</description>
    <label>CA Exhibit</label>
    <nameField>
        <displayFormat>CAEX-{00000}</displayFormat>
        <label>CA Exhibit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Exhibits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>