unpackaged/main/default/objects/CA_Exhibit__c/fields/Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>Activity_Level__c</fullName>
    <label>Activity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
            <value>
                <fullName>Priority 1</fullName>
            </value>
            <value>
                <fullName>Priority 2</fullName>
            </value>
            <value>
                <fullName>Priority 3</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>