unpackaged/main/default/objects/CA_Exhibit__c/fields/Agency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact_Name__c</fullName>
    <label>Agency Contact Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>