unpackaged/main/default/objects/CA_Exhibit__c/fields/AV_Detail__c.field-meta.xml
<CustomField>
    <fullName>AV_Detail__c</fullName>
    <label>AV Detail</label>
    <type>TextArea</type>
</CustomField>