unpackaged/main/default/objects/CA_Exhibit__c/fields/Avg_Time_Page__c.field-meta.xml
<CustomField>
    <fullName>Avg_Time_Page__c</fullName>
    <label>Average Time on Page</label>
    <length>10</length>
    <type>Text</type>
</CustomField>