unpackaged/main/default/objects/CA_Exhibit__c/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <label>Booth Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>