unpackaged/main/default/objects/CA_Exhibit__c/fields/Booth_Property_Required__c.field-meta.xml
<CustomField>
    <fullName>Booth_Property_Required__c</fullName>
    <label>Booth Property Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Pull-up’s</fullName>
            </value>
            <value>
                <fullName>Corporate 10x10</fullName>
            </value>
            <value>
                <fullName>Corporate Pull-up’s</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Fiber 10x10</fullName>
            </value>
            <value>
                <fullName>Fiber Graphic Tradeshow Pull-up</fullName>
            </value>
            <value>
                <fullName>Fiber Lobby Event Pull-up</fullName>
            </value>
            <value>
                <fullName>Fiber Product List Pull-up</fullName>
            </value>
            <value>
                <fullName>Literature Rack</fullName>
            </value>
            <value>
                <fullName>Pedestal</fullName>
            </value>
            <value>
                <fullName>Turnkey Booth Solution</fullName>
            </value>
            <value>
                <fullName>WISPA 10x10</fullName>
            </value>
            <value>
                <fullName>EIABs</fullName>
            </value>
            <value>
                <fullName>Hanging Sign</fullName>
            </value>
            <value>
                <fullName>BDX Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>