unpackaged/main/default/objects/CA_Exhibit__c/fields/Booth_Staffing__c.field-meta.xml
<CustomField>
    <fullName>Booth_Staffing__c</fullName>
    <label>Booth Staffing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>