unpackaged/main/default/objects/CA_Exhibit__c/fields/CC_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>CC_Project_Manager__c</fullName>
    <label>CC Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Juanita Timney</fullName>
            </value>
            <value>
                <fullName>Stephanie Naida</fullName>
            </value>
            <value>
                <fullName>Cassandra Zwick</fullName>
            </value>
            <value>
                <fullName>Kayleigh Fortuna</fullName>
            </value>
            <value>
                <fullName>Lisandra Fernandez</fullName>
            </value>
            <value>
                <fullName>Katie Lillie</fullName>
            </value>
            <value>
                <fullName>Lisa Gebhart</fullName>
            </value>
            <value>
                <fullName>Mulvey, Mike</fullName>
            </value>
            <value>
                <fullName>Pesch, Patty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>