unpackaged/main/default/objects/CA_Exhibit__c/fields/Congress_Manager_Onsite__c.field-meta.xml
<CustomField>
    <fullName>Congress_Manager_Onsite__c</fullName>
    <label>Congress Manager Onsite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joe Walsh</fullName>
            </value>
            <value>
                <fullName>John Hasemann</fullName>
            </value>
            <value>
                <fullName>Rebecca Baker</fullName>
            </value>
            <value>
                <fullName>Kaitlyn Reynolds</fullName>
            </value>
            <value>
                <fullName>Katie Lillie</fullName>
            </value>
            <value>
                <fullName>Andrew Rolls</fullName>
            </value>
            <value>
                <fullName>Jacqueline Campo</fullName>
            </value>
            <value>
                <fullName>Corrine Landolt</fullName>
            </value>
            <value>
                <fullName>Laurie Stein-Richards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>