unpackaged/main/default/objects/CA_Exhibit__c/fields/Data_Collection_Methods__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection_Methods__c</fullName>
    <label>Data Collection Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>E-Literature</fullName>
            </value>
            <value>
                <fullName>Interactive E-detail with scanning</fullName>
            </value>
            <value>
                <fullName>App Badge Scanning (API obtained)</fullName>
            </value>
            <value>
                <fullName>Hospitality Scanning/E-Delivery Hospitality</fullName>
            </value>
            <value>
                <fullName>Heat Mapping/Traffic Tracking</fullName>
            </value>
            <value>
                <fullName>Show Provided Badge Scanning</fullName>
            </value>
            <value>
                <fullName>Customer Target Match to List</fullName>
            </value>
            <value>
                <fullName>Client not interested in collecting any data</fullName>
            </value>
            <value>
                <fullName>Other –open field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>