unpackaged/main/default/objects/CA_Exhibit__c/fields/Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager__c</fullName>
    <label>Event Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aisling Meehan</fullName>
            </value>
            <value>
                <fullName>Aleida Rosete</fullName>
            </value>
            <value>
                <fullName>Ardolino, Carol</fullName>
            </value>
            <value>
                <fullName>Battaglia, Frank</fullName>
            </value>
            <value>
                <fullName>Budrecki, Sheree</fullName>
            </value>
            <value>
                <fullName>Caitlin Ferdyn</fullName>
            </value>
            <value>
                <fullName>Carey-Smalls, Fanchon</fullName>
            </value>
            <value>
                <fullName>Casarotto, Ilenia</fullName>
            </value>
            <value>
                <fullName>Cassandra Zwick</fullName>
            </value>
            <value>
                <fullName>Curtin, Nadine</fullName>
            </value>
            <value>
                <fullName>D&#39;Onofrio, Lisa</fullName>
            </value>
            <value>
                <fullName>Daily, Carla</fullName>
            </value>
            <value>
                <fullName>Don Schmid</fullName>
            </value>
            <value>
                <fullName>Event Manager 1</fullName>
            </value>
            <value>
                <fullName>Event Manager 2</fullName>
            </value>
            <value>
                <fullName>Event Manager 3</fullName>
            </value>
            <value>
                <fullName>Fletcher, Samantha</fullName>
            </value>
            <value>
                <fullName>Glowacki, Carolyn</fullName>
            </value>
            <value>
                <fullName>Horvath, Judy</fullName>
            </value>
            <value>
                <fullName>Joanne Hynes</fullName>
            </value>
            <value>
                <fullName>Juanita Timney</fullName>
            </value>
            <value>
                <fullName>Katie Lillie</fullName>
            </value>
            <value>
                <fullName>Kayleigh Fortuna</fullName>
            </value>
            <value>
                <fullName>Kepes, Erica</fullName>
            </value>
            <value>
                <fullName>Laine Mann</fullName>
            </value>
            <value>
                <fullName>Lee Kim</fullName>
            </value>
            <value>
                <fullName>Lisa Mahan</fullName>
            </value>
            <value>
                <fullName>Lisandra Fernandez</fullName>
            </value>
            <value>
                <fullName>Lopez, Ralph</fullName>
            </value>
            <value>
                <fullName>Medus, Heather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>