unpackaged/main/default/objects/CA_Exhibit__c/fields/Event_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Email__c</fullName>
    <label>Event Manager Email</label>
    <type>Email</type>
</CustomField>