unpackaged/main/default/objects/CA_Exhibit__c/fields/Exhibit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Notes__c</fullName>
    <label>Exhibit Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>