unpackaged/main/default/objects/CA_Exhibit__c/fields/Exhibit_Space_Type__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Space_Type__c</fullName>
    <label>Exhibit Space Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inline</fullName>
            </value>
            <value>
                <fullName>Island</fullName>
            </value>
            <value>
                <fullName>Pedestal</fullName>
            </value>
            <value>
                <fullName>Peninsula</fullName>
            </value>
            <value>
                <fullName>Pull-up Banner</fullName>
            </value>
            <value>
                <fullName>TableTop</fullName>
            </value>
            <value>
                <fullName>Turnkey Booth Solution</fullName>
            </value>
            <value>
                <fullName>Bannerstand</fullName>
            </value>
            <value>
                <fullName>Tabletop-Folding</fullName>
            </value>
            <value>
                <fullName>Tabletop-Backlit</fullName>
            </value>
            <value>
                <fullName>Tabletop-Portable</fullName>
            </value>
            <value>
                <fullName>Inline-Custom</fullName>
            </value>
            <value>
                <fullName>Inline-Portable</fullName>
            </value>
            <value>
                <fullName>Pull-up Banner Stand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>