unpackaged/main/default/objects/CA_Exhibit__c/fields/GES_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager__c</fullName>
    <label>GES Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aldridge, Hannah</fullName>
            </value>
            <value>
                <fullName>Beyer, Lisa</fullName>
            </value>
            <value>
                <fullName>Broome, Julia</fullName>
            </value>
            <value>
                <fullName>Brosmore, Jamie</fullName>
            </value>
            <value>
                <fullName>Brown, Caroline</fullName>
            </value>
            <value>
                <fullName>Buzzatto, Stephanie</fullName>
            </value>
            <value>
                <fullName>Callaway, Carsen</fullName>
            </value>
            <value>
                <fullName>Carey-Smalls, Fanchon</fullName>
            </value>
            <value>
                <fullName>Costa, Debra</fullName>
            </value>
            <value>
                <fullName>Dabra Watters</fullName>
            </value>
            <value>
                <fullName>Dewey, Kaila</fullName>
            </value>
            <value>
                <fullName>Ellis, Richard</fullName>
            </value>
            <value>
                <fullName>Epperson, Jill</fullName>
            </value>
            <value>
                <fullName>Fletcher, Samantha</fullName>
            </value>
            <value>
                <fullName>Gorman, Celeste</fullName>
            </value>
            <value>
                <fullName>Harley, Lauren</fullName>
            </value>
            <value>
                <fullName>Kearney, Jaclynn</fullName>
            </value>
            <value>
                <fullName>Lyles, Terica</fullName>
            </value>
            <value>
                <fullName>Marsh, Reta</fullName>
            </value>
            <value>
                <fullName>Mason, Lindsey</fullName>
            </value>
            <value>
                <fullName>Medus, Heather</fullName>
            </value>
            <value>
                <fullName>Morris, Dana</fullName>
            </value>
            <value>
                <fullName>Morton, Lora</fullName>
            </value>
            <value>
                <fullName>O’Connell, Mary</fullName>
            </value>
            <value>
                <fullName>Platt, Becky</fullName>
            </value>
            <value>
                <fullName>Poole, Lauren</fullName>
            </value>
            <value>
                <fullName>Powell, Julie</fullName>
            </value>
            <value>
                <fullName>Proule, Jeannette</fullName>
            </value>
            <value>
                <fullName>Shamey-Golonka, Kimrlee</fullName>
            </value>
            <value>
                <fullName>Shulman, Amanda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>