unpackaged/main/default/objects/CA_Exhibit__c/fields/GES_PM_Email__c.field-meta.xml
<CustomField>
    <fullName>GES_PM_Email__c</fullName>
    <formula>IF((TEXT(GES_Project_Manager__c) == &quot;Porter, Mike&quot;),&quot;MPorter@ges.com&quot;,
IF((TEXT(GES_Project_Manager__c) == &quot;Montagne, Sarah&quot;),&quot;smontagne@ges.com&quot;,
IF((TEXT(GES_Project_Manager__c) == &quot;Ward, Nick&quot;),&quot;NWard@ges.com&quot;,
IF((TEXT(GES_Project_Manager__c) == &quot;Wright, Chris&quot;),&quot;cwright@ges.com&quot;,
IF((TEXT(GES_Project_Manager__c) == &quot;Da silva, Camille&quot;),&quot;cdasilva@ges.com&quot;,
IF((TEXT(GES_Project_Manager__c) == &quot;Ferraro, Antonio&quot;),&quot;aferraro@ges.com&quot;,
IF((TEXT(GES_Project_Manager__c) == &quot;Kelly, Alexa&quot;),&quot;alexak@ges.com&quot;,
IF((TEXT(GES_Project_Manager__c) == &quot;Medus, Heather&quot;),&quot;hmedus@ges.com&quot;,
IF((TEXT(GES_Project_Manager__c) == &quot;Wainman, Ana&quot;),&quot;awainman@ges.com&quot;,
IF((TEXT(GES_Project_Manager__c) == &quot;Samuel, Mike&quot;),&quot;RSamuel@ges.com&quot;,
&quot;&quot;))))))))))</formula>
    <label>GES PM Email</label>
    <type>Text</type>
</CustomField>