unpackaged/main/default/objects/CA_Exhibit__c/fields/GES_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Project_Manager__c</fullName>
    <label>GES Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Da silva, Camille</fullName>
            </value>
            <value>
                <fullName>Ferraro, Antonio</fullName>
            </value>
            <value>
                <fullName>Kelly, Alexa</fullName>
            </value>
            <value>
                <fullName>Medus, Heather</fullName>
            </value>
            <value>
                <fullName>Montagne, Sarah</fullName>
            </value>
            <value>
                <fullName>Mulvey, Mike</fullName>
            </value>
            <value>
                <fullName>Pesch, Patty</fullName>
            </value>
            <value>
                <fullName>Porter, Mike</fullName>
            </value>
            <value>
                <fullName>Wainman, Ana</fullName>
            </value>
            <value>
                <fullName>Ward, Nick</fullName>
            </value>
            <value>
                <fullName>Wright, Chris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>