unpackaged/main/default/objects/CA_Exhibit__c/fields/I_D_Name_Other__c.field-meta.xml
<CustomField>
    <fullName>I_D_Name_Other__c</fullName>
    <label>I &amp; D Name Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>