unpackaged/main/default/objects/CA_Exhibit__c/fields/I_D_Phone__c.field-meta.xml
<CustomField>
    <fullName>I_D_Phone__c</fullName>
    <label>I&amp;D Phone</label>
    <type>Phone</type>
</CustomField>