unpackaged/main/default/objects/CA_Exhibit__c/fields/I_D_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>I_D_Supervisor__c</fullName>
    <label>I &amp; D Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Finstrom, Brad</fullName>
            </value>
            <value>
                <fullName>Vanderpol, Gary</fullName>
            </value>
            <value>
                <fullName>Storm, Kari</fullName>
            </value>
            <value>
                <fullName>Mattson, Scott</fullName>
            </value>
            <value>
                <fullName>Hadrava, Don</fullName>
            </value>
            <value>
                <fullName>Skarupa, Dennis</fullName>
            </value>
            <value>
                <fullName>Wilma, Mark</fullName>
            </value>
            <value>
                <fullName>Monahan, Shane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>