unpackaged/main/default/objects/CA_Exhibit__c/fields/I_D_Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>I_D_Supervisor_Email__c</fullName>
    <formula>IF((TEXT(I_D_Supervisor__c) == &quot;Vanderpol, Gary&quot;),&quot;GVanderpol@ges.com&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Storm, Kari&quot;),&quot;KStorm@ges.com&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Mattson, Scott&quot;),&quot;SMattson@ges.com&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Hadrava, Don&quot;),&quot;dhadrava@ges.com&quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Skarupa, Dennis&quot;),&quot; &quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Burgess, Steve&quot;),&quot;Sburgess@ges.com&quot;,
&quot;&quot;))))))</formula>
    <label>I&amp;D Supervisor Email</label>
    <type>Text</type>
</CustomField>