unpackaged/main/default/objects/CA_Exhibit__c/fields/In_Booth_Hospitality__c.field-meta.xml
<CustomField>
    <fullName>In_Booth_Hospitality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Booth Hospitality</label>
    <type>Checkbox</type>
</CustomField>