unpackaged/main/default/objects/CA_Exhibit__c/fields/Land_Page_Unq_Visits__c.field-meta.xml
<CustomField>
    <fullName>Land_Page_Unq_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Landing Page Unique Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>