unpackaged/main/default/objects/CA_Exhibit__c/fields/Participation_Type_Exhibit__c.field-meta.xml
<CustomField>
    <fullName>Participation_Type_Exhibit__c</fullName>
    <label>Participation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>