unpackaged/main/default/objects/CA_Exhibit__c/fields/Reason_For_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Cancellation__c</fullName>
    <label>Reason For Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Budget Cut</fullName>
            </value>
            <value>
                <fullName>Event Not Occurring</fullName>
            </value>
            <value>
                <fullName>Exhibit Space Sold Out</fullName>
            </value>
            <value>
                <fullName>Product Owner Decision</fullName>
            </value>
            <value>
                <fullName>Public Health Issue</fullName>
            </value>
            <value>
                <fullName>Strategy Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>