unpackaged/main/default/objects/CA_Exhibit__c/fields/Total_Content_Views__c.field-meta.xml
<CustomField>
    <fullName>Total_Content_Views__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Content Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>