unpackaged/main/default/objects/CA_Exhibit__c/recordTypes/CA_Exhibit_BMS.recordType-meta.xml
<RecordType>
    <fullName>CA_Exhibit_BMS</fullName>
    <active>true</active>
    <label>CA Exhibit BMS</label>
</RecordType>