unpackaged/main/default/objects/CA_Exhibit__c/recordTypes/CA_Exhibit_Crown_Castle.recordType-meta.xml
<RecordType>
    <fullName>CA_Exhibit_Crown_Castle</fullName>
    <active>true</active>
    <label>CA Exhibit Crown Castle</label>
</RecordType>