unpackaged/main/default/objects/CA_Exhibit__c/recordTypes/CA_Exhibit_Merck.recordType-meta.xml
<RecordType>
    <fullName>CA_Exhibit_Merck</fullName>
    <active>true</active>
    <description>Merck&#39;s Exhibit Record Type for New Community</description>
    <label>CA Exhibit Merck</label>
</RecordType>