unpackaged/main/default/objects/CA_Exhibit__c/validationRules/CA_PreventCancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_PreventCancellation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Cancelled__c = false,
Event__r.Event_Cancelled__c =true)</errorConditionFormula>
    <errorDisplayField>Cancelled__c</errorDisplayField>
    <errorMessage>You can not Un-Cancel Exhibit details considering Main Event already cancelled.</errorMessage>
</ValidationRule>